feat: search books

--- a/Views/Shared/_LayoutMenu.cshtml
+++ b/Views/Shared/_LayoutMenu.cshtml
@@ -4,20 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        /*ESTILO TEMPORÁRIO PARA O DROPDOWN*/
+        .search-dropdown {
+            display: none;
+            position: absolute;
+            background-color: white;
+            border: 1px solid #ccc;
+            max-height: 200px;
+            overflow-y: auto;
+            z-index: 1;
+        }
+
+            .search-dropdown ul {
+                padding: 0;
+                margin: 0;
+                list-style-type: none;
+            }
+
+            .search-dropdown li {
+                padding: 8px;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+            }
+
+                .search-dropdown li:hover {
+                    background-color: #f1f1f1;
+                }
+
+            .search-dropdown img {
+                width: 40px;
+                height: 40px;
+                margin-right: 10px;
+            }
+    </style>
 </head>
 <body>
     <nav>
         <div class="nav-logo"><img src="/" alt="Logo Leitour"></div>
-        <div class="nav-searchbar">
-            <form method="get" action="@Url.Action("SearchResult", "Post")">
-                <input type="text" placeholder="Pesquisar" class="search-input" name="query">
-                <button type="submit">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 27 27" fill="none">
-                        <path d="M11.25 2.25C9.81761 2.24985 8.40588 2.59158 7.13215 3.24679C5.85841 3.90201 4.75946 4.85178 3.92664 6.01716C3.09381 7.18254 2.55118 8.52987 2.34382 9.94716C2.13647 11.3644 2.2704 12.8108 2.73447 14.1659C3.19854 15.521 3.97935 16.7458 5.012 17.7384C6.04466 18.7311 7.29932 19.4629 8.67171 19.8731C10.0441 20.2833 11.4946 20.36 12.9026 20.0968C14.3106 19.8336 15.6354 19.2382 16.767 18.36L22.8285 24.4192C22.9323 24.5267 23.0564 24.6124 23.1937 24.6714C23.3309 24.7303 23.4785 24.7614 23.6279 24.7627C23.7773 24.764 23.9254 24.7355 24.0637 24.6789C24.2019 24.6224 24.3276 24.5388 24.4332 24.4332C24.5388 24.3276 24.6223 24.202 24.6789 24.0637C24.7355 23.9254 24.7639 23.7773 24.7626 23.6279C24.7613 23.4785 24.7303 23.3309 24.6714 23.1937C24.6124 23.0564 24.5267 22.9323 24.4192 22.8285L18.36 16.7692C19.3928 15.4389 20.0317 13.8454 20.2038 12.17C20.376 10.4946 20.0746 8.80446 19.3339 7.29185C18.5932 5.77924 17.4429 4.50483 16.0138 3.61353C14.5847 2.72223 12.9342 2.24981 11.25 2.25ZM4.49999 11.25C4.49999 9.45979 5.21115 7.7429 6.47702 6.47703C7.74289 5.21116 9.45977 4.5 11.25 4.5C13.0402 4.5 14.7571 5.21116 16.023 6.47703C17.2888 7.7429 18 9.45979 18 11.25C18 13.0402 17.2888 14.7571 16.023 16.023C14.7571 17.2888 13.0402 18 11.25 18C9.45977 18 7.74289 17.2888 6.47702 16.023C5.21115 14.7571 4.49999 13.0402 4.49999 11.25Z" fill="#7E7E7E" />
-                    </svg>
-                </button>
-            </form>
+        <div class="search-container">
+            <input type="text" placeholder="Pesquisar" class="search-input" oninput="search(event)">
+            <div class="search-dropdown">
+                <ul class="search-results"></ul>
+            </div>
         </div>
+        <div class="search-results"></div>
         <button>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
                 <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z" />
@@ -105,6 +137,71 @@
             }
 
             fetchUserData();
+
+
+            let typingTimer;
+            const doneTypingInterval = 500;
+
+            function search(event) {
+                clearTimeout(typingTimer);
+
+                const query = event.target.value.trim();
+                if (query === '') {
+                    hideDropdown();
+                    return;
+                }
+
+                typingTimer = setTimeout(() => {
+                    fetchSearchResults(query);
+                }, doneTypingInterval);
+            }
+
+            function fetchSearchResults(query) {
+                fetch(`https://localhost:5226/api/SearchBy/search/${query}`)
+                    .then(response => response.json())
+                    .then(data => {
+                        displayResults(data);
+                        showDropdown();
+                    })
+                    .catch(error => {
+                        console.error('Erro ao buscar resultados:', error);
+                    });
+            }
+
+            function displayResults(results) {
+                const dropdownList = document.querySelector('.search-dropdown ul');
+                dropdownList.innerHTML = '';
+
+                results.forEach(result => {
+                    const listItem = document.createElement('li');
+                    const coverImage = document.createElement('img');
+                    coverImage.src = result.cover;
+                    coverImage.alt = 'Capa do livro';
+                    listItem.appendChild(coverImage);
+
+                    const title = document.createElement('span');
+                    title.textContent = result.title;
+                    listItem.appendChild(title);
+
+                    let isbn = result.isbN_10 || result.isbN_13;
+                    console.log(isbn);
+                    const link = document.createElement('a');
+                    link.href = `/Book/BookPage/${isbn}`;
+                    link.appendChild(listItem);
+
+                    dropdownList.appendChild(link);
+                });
+            }
+
+            function showDropdown() {
+                const dropdown = document.querySelector('.search-dropdown');
+                dropdown.style.display = 'block';
+            }
+
+            function hideDropdown() {
+                const dropdown = document.querySelector('.search-dropdown');
+                dropdown.style.display = 'none';
+            }
 
         </script>
 
