--- a/Views/User/Registrar.cshtml
+++ b/Views/User/Registrar.cshtml
@@ -1,4 +1,4 @@
-﻿@model webleitour.Container.Models.UserModel
+﻿@model webleitour.Container.Models.RegisterUserModel
 
 @{
     Layout = null;
@@ -6,288 +6,58 @@
 }
 
 <div class="main-section" id="main-section">
-    <div class="container-login">
-        <div class="login right-login gap2">
-            <img src="~/Images/LogoLeitour.svg" alt="Logo">
-            <form asp-controller="User" asp-action="NewAccount" method="get">
-                @Html.ActionLink("Logar", "Index", "User", new { id = "newAccountButton" }, null)
-            </form>
+    <div class="container-register">
+        <div class="register right-register gap2">
+            <div class="register-img">
+                <img src="~/Images/LogoLeitour.svg" alt="Logo">
+            </div>
+            <div class="already-have-an-account-button">
+                <form asp-controller="User" asp-action="NewAccount" method="get">
+                    @Html.ActionLink("Fazer Login", "Index", "User", new { id = "newAccountButton" }, null)
+                </form>
+            </div>
         </div>
 
-        <div class="login left-login gap">
-            <h1>Login</h1>
-            <h3>Seja bem-vindo a Leitour</h3>
-            @using (Html.BeginForm("Registrar", "User", FormMethod.Post))
+        <div class="register left-register gap">
+            <h1>Registro</h1>
+            <h3>Nova Conta</h3>
+            @using (Html.BeginForm("Register", "User", FormMethod.Post))
             {
-                <div class="form-login">
-                    <div class="username-login">
-                        @Html.EditorFor(model => model.NameUser, new { placeholder = "Username" })
+
+                @Html.AntiForgeryToken()
+
+                <div class="form-register">
+                    <div class="nameuser-register">
+                        <span class="email-register-span"><img src="~/Images/nameuser.svg" /></span>
+                        @Html.TextBoxFor(model => model.NameUser, new { @class = "nameuser", required = "required" })
+                        @Html.ValidationMessageFor(model => model.NameUser)
                     </div>
-                    <div class="email-login">
-                        @Html.EditorFor(model => model.Email, new { placeholder = "Email" })
+
+                    <div class="email-register">
+                        <span class="email-register-span">@@</span>
+                        @Html.TextBoxFor(model => model.Email, new { @class = "email", placeholder = "Enter your email", required = "required" })
+                        @Html.ValidationMessageFor(model => model.Email)
                     </div>
-                    <div class="password-login">
-                        @Html.PasswordFor(model => model.Password, new { placeholder = "Password" })
+
+
+                    <div class="password-register">
+                        <span class="password-login-span"><img src="~/Images/key.svg"></span>
+                        @Html.PasswordFor(model => model.Password, new { @class = "password", placeholder = "Enter your password", required = "required" })
+                        @Html.ValidationMessageFor(model => model.Password)
                     </div>
-                    <div class="button-login">
-                        <input type="submit" value="Registrar" id="loginButton">
+
+
+                    <div class="confirm-password-register">
+                        <span class="password-login-span"><img src="~/Images/key.svg"></span>
+                        @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm your password" })
+                        @Html.ValidationMessageFor(model => model.ConfirmPassword)
+                    </div>
+
+                    <div class="button-register">
+                        <input type="submit" value="Enviar" id="loginButton">
                     </div>
                 </div>
             }
         </div>
     </div>
 </div>
-
-
-<style>
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: Arial;
-    }
-
-    a {
-        color: #000;
-        text-decoration: none;
-        color: #4D4D4E;
-        text-align: center;
-        font-size: 14px;
-        font-style: bold;
-        font-weight: 700;
-        line-height: normal;
-    }
-
-    label {
-        color: #4D4D4E;
-        text-align: center;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: normal;
-    }
-
-    h1 {
-        color: #1358E3;
-        text-align: center;
-        font-size: 35px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-        text-transform: uppercase;
-    }
-
-    h3 {
-        color: #4D4D4E;
-        text-align: center;
-        font-size: 20px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: normal;
-    }
-
-
-    .main-section {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        min-height: 100vh;
-        background: linear-gradient(159deg, #05F 14.03%, #003398 94.64%);
-    }
-
-    .container-login {
-        display: flex;
-        width: 1240px;
-        height: 640px;
-        justify-content: center;
-        align-items: center;
-        background-color: #fff;
-        border-radius: 40px;
-    }
-
-    .login {
-        display: flex;
-        width: 620px;
-        height: 320px;
-        flex-direction: column;
-    }
-
-    .right-login {
-        justify-content: space-around;
-        align-items: center;
-    }
-
-    .left-login {
-        justify-content: space-between;
-        align-items: center;
-        border-left: 4px solid #D3CBCB;
-    }
-
-    .rememberAndPassword {
-        display: flex;
-    }
-
-    .button-login {
-        width: 256px;
-        height: 56px;
-    }
-
-    #loginButton {
-        height: 100%;
-        width: 100%;
-        border-radius: 20px;
-        border: none;
-        background: linear-gradient(130deg, #145CEC 27.16%, #093284 92.98%);
-        color: #FFF;
-        text-align: center;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-        cursor: pointer;
-    }
-
-    .new-account-button {
-        width: 256px;
-        height: 56px;
-    }
-
-    #newAccountButton {
-        background-color: transparent;
-        height: 100%;
-        width: 100%;
-        border-radius: 20px;
-        border-radius: 20px;
-        border: 2px solid #145CEC;
-        color: #1358E3;
-        text-align: center;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-        cursor: pointer;
-        padding: 1rem;
-    }
-
-    .form-login {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-        gap: 28px;
-    }
-
-    .email-login, .username-login {
-        position: relative;
-        display: flex;
-        justify-content: start;
-        align-self: center;
-        height: 80px;
-        width: 432px;
-        border-radius: 20px;
-        border: 2px solid #CEC1C1;
-    }
-
-    input#NameUser {
-        position: relative;
-        display: flex;
-        justify-content: start;
-        align-self: center;
-        height: 80px;
-        width: 432px;
-        border-radius: 20px;
-        border: 2px solid #CEC1C1;
-    }
-
-    #email {
-        height: 100%;
-        width: 100%;
-        border-radius: 20px;
-        border: none;
-        padding-left: 20px;
-        font-size: 20px;
-        font-weight: 500;
-        color: #000;
-        border-left: 2px solid #000;
-    }
-
-        #email::placeholder {
-            color: #B5ADAD;
-        }
-
-        #email::-ms-check {
-            border-left: none;
-        }
-
-    .email-login-span {
-        position: relative;
-        width: 16%;
-        left: 4%;
-        top: 24%;
-    }
-
-
-    .password-login {
-        position: relative;
-        display: flex;
-        justify-content: start;
-        align-self: center;
-        height: 80px;
-        width: 432px;
-        border-radius: 20px;
-        border: 2px solid #CEC1C1;
-    }
-
-    #password {
-        height: 100%;
-        width: 100%;
-        border-radius: 20px;
-        border: none;
-        padding-left: 20px;
-        font-size: 20px;
-        font-weight: 500;
-        color: #000;
-        border-left: 2px solid #000;
-    }
-
-        #password::placeholder {
-            color: #B5ADAD;
-        }
-
-    .password-login-span {
-        position: relative;
-        width: 16%;
-        left: 4%;
-        top: 32%;
-        border-left: 4px #4D4D4E;
-    }
-
-    .gap {
-        gap: 20px;
-    }
-
-    .gap2 {
-        gap: 32%;
-    }
-
-    #remeberCheckBox {
-        cursor: pointer;
-    }
-
-    .rememberAndPassword {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    #forgotPass {
-        align-items: end;
-    }
-</style>
